--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
           submodules: recursive
       - uses: actions/checkout@v4
         with:
-          repository: mattwalsh/zmk
+          repository: zmkfirmware/zmk
           ref: main
           path: src
       - uses: cachix/install-nix-action@v25
